0.9611_01 2022-06-22
  * 
0.9611 2022-06-22
  [NON BACKWORD COMPATIBLE CHANGES]
  * Remove Time->timegm and Time->timelocal because of Windows/MinGW compatibility.
    Use CPAN's SPVM::Time::Local module instead.
0.9610 2022-06-22
  [CHANGE]
  * Add error_code operator
  * Add set_error_code operator
  * exception become stack variable from env variable.
  * native mortal stack become stack variable from env variable.
  [NON BACKWORD COMPATIBLE CHANGES]
  * Change the definitions of the following native APIs
    [Before]
    int32_t (*call_class_method)(SPVM_ENV* env, int32_t method_id, SPVM_VALUE* args);
    int32_t (*call_class_method_by_name)(SPVM_ENV* env, const char* class_name, const char* method_name, const char* signature, SPVM_VALUE* stack_unused, const char* file, int32_t line);
    int32_t (*call_instance_method)(SPVM_ENV* env, int32_t method_id, SPVM_VALUE* args);
    int32_t (*call_instance_method_by_name)(SPVM_ENV* env, void* object, const char* method_name, const char* signature, SPVM_VALUE* stack_unused, const char* file, int32_t line);
    int32_t (*call_spvm_method)(SPVM_ENV* env, int32_t method_id, SPVM_VALUE* args);
    
    [After]
    int32_t (*call_class_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id);
    int32_t (*call_class_method_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, const char* method_name, const char* signature, const char* file, int32_t line);
    int32_t (*call_instance_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id);
    int32_t (*call_instance_method_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, const char* method_name, const char* signature, const char* file, int32_t line);
    int32_t (*call_spvm_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id);
  * Change the definitions of the following native API
    [Before]
    void (*call_init_blocks)(SPVM_ENV* env);
    
    [After]
    void (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);