@@ -2117,13 +2117,19 @@ void SPVM_PRECOMPILE_build_method_implementation(SPVM_PRECOMPILE* precompile, SP
       }
       case SPVM_OPCODE_C_ID_SET_ERROR_CODE: {
         SPVM_STRING_BUFFER_add(string_buffer, "  {\n"
-                                              "    error_code = ");
+                                              "    int32_t tmp_error_code = ");
         SPVM_PRECOMPILE_add_var(precompile, string_buffer, SPVM_PRECOMPILE_C_CTYPE_ID_INT, opcode->operand1);
         SPVM_STRING_BUFFER_add(string_buffer, ";\n"
-        
-                                              "      ");
+                                              "    if (tmp_error_code < 1) {\n"
+                                              "      void* exception = env->new_string_nolen_raw(env, stack, \"The error code must be more than or equal to 1\");\n"
+                                              "      env->set_exception(env, stack, exception);\n"
+                                              "      error = 1;\n"
+                                              "    }\n"
+                                              "    else {\n"
+                                              "      error_code = tmp_error_code;");
         SPVM_PRECOMPILE_add_operand(precompile, string_buffer, SPVM_PRECOMPILE_C_CTYPE_ID_INT, opcode->operand0);
         SPVM_STRING_BUFFER_add(string_buffer, " = error_code;\n"
+                                              "    }\n"
                                               "  }\n");
         
         break;
