@@ -1,5 +1,6 @@
 0.9611_01 2022-06-22
-  * 
+  [CHANGE]
+  * set_error_code throw an exception when the value is not more than or equal to 1.
 0.9611 2022-06-22
   [NON BACKWORD COMPATIBLE CHANGES]
   * Remove Time->timegm and Time->timelocal because of Windows/MinGW compatibility.
